--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Mis QR</a></li>
           <li><a href="#">Actualizar</a></li>
+          <li><a href="#">Configuraciones</a></li>
         </ul>
     </nav>
 
@@ -21,7 +22,7 @@
         <button onclick="generateQR()">Generar QR</button>
         <div id="qr-code"></div>
         <!-- Nuevos botones -->
-        <button id="download-button">Descargar QR</button>
+        <button id="download-button" onclick="descargar()">Descargar QR</button>
         <!--<button id="buy-button">Actualizar</button> -->
     </div>
 
