--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Mis QR</a></li>
           <li><a href="#">Actualizar</a></li>
-          <li><a href="#">Configuraciones</a></li>
+          <li><a href="#">Configuracione</a></li>
         </ul>
     </nav>
 
